<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.baman.manex.controls.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_divider"
            android:layout_below="@+id/toolbar"
            android:background="@color/white"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/dimen_medium"
                android:layout_marginEnd="@dimen/dimen_medium">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.baman.manex.controls.TextInputLayoutProfileControl
                        android:id="@+id/name_textinputprofile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_small"
                        app:boxBackground="@color/white"
                        app:hintText="@string/editprofile_name"
                        app:pic="@drawable/ic_name" />

                </RelativeLayout>


                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/family_textinputprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_medium"
                    app:boxBackground="@color/white"
                    app:hintText="@string/editprofile_family" />

                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/gender_textinputprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_medium"
                    app:boxBackground="@color/white"
                    app:hintText="@string/editprofile_gender"
                    app:isBirthday="true"
                    app:pic="@drawable/ic_gender" />

                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/birthday_textinputprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_medium"
                    app:boxBackground="@color/white"
                    app:hintText="@string/editprofile_birthday"
                    app:isBirthday="true"
                    app:pic="@drawable/ic_birthday" />

                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/job_textinputprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_medium"
                    app:boxBackground="@color/white"
                    app:hintText="@string/editprofile_job"
                    app:pic="@drawable/ic_job" />

                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/email_textinputprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_medium"
                    app:boxBackground="@color/white"
                    app:hintText="@string/editprofile_email"
                    app:pic="@drawable/ic_email" />

                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/address_textinputprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_medium"
                    app:boxBackground="@color/white"
                    app:hintText="@string/editprofile_address"
                    app:pic="@drawable/ic_address" />

                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/postal_code_textinputprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_medium"
                    android:layout_marginBottom="@dimen/dimen_small"
                    app:boxBackground="@color/white"
                    app:hintText="@string/editprofile_postal_code"
                    app:pic="@drawable/ic_mailbox" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <View
            android:id="@+id/button_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/update_user"
            android:background="@color/divider" />

        <RelativeLayout
            android:id="@+id/update_user"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dimen_medium"
            android:layout_marginTop="@dimen/dimen_medium"
            android:layout_marginEnd="@dimen/dimen_medium"
            android:layout_marginBottom="@dimen/dimen_medium"
            android:background="@drawable/background_button_details">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/save_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="ذخیره اطلاعات"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.tuyenmonkey.mkloader.MKLoader
                android:id="@+id/loading"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="gone"
                app:mk_color="@color/white"
                app:mk_type="FishSpinner" />

        </RelativeLayout>

    </RelativeLayout>

</layout>