<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dimen_medium"
        android:layout_marginEnd="@dimen/dimen_medium"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/search_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_no_internet"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/iranyekan_bold"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:text="@string/no_internet_connection" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_medium"
            android:fontFamily="@font/iranyekan"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp"
            android:lineSpacingExtra="8sp"
            android:text="@string/no_internet_connection_desc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/again"
            android:layout_width="112dp"
            android:layout_height="32dp"
            android:text="@string/again"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small"
            android:background="@drawable/background_button_details"
            android:fontFamily="@font/iranyekan_bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</RelativeLayout>