<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/white"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="23dp"

        android:text="@string/your_referral_code"
        android:textColor="@color/text_color"
        android:textSize="@dimen/font_size_medium"
        />

    <RelativeLayout
        android:id="@+id/close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/dimen_medium"
        android:layout_marginStart="@dimen/dimen_medium"
        >

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerInParent="true"

            app:srcCompat="@drawable/ic_close"
            />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"

        android:background="@color/text_hint"
        />

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"

        app:srcCompat="@drawable/ic_handshake"
        />

    <com.baman.manex.controls.TextInputLayoutControl
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginStart="@dimen/dimen_medium"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="@dimen/dimen_medium"

        app:hint="@string/referral_code"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"

        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/confirm_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:layout_weight="1"

            android:gravity="center"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/check_and_confirm"
                android:textColor="@color/color_button_enabled"
                android:textSize="14sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cancel_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dimen_medium"

            android:gravity="center"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/cancel"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>