<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.baman.manex.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnLayout"
            android:clipChildren="false"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    app:srcCompat="@drawable/ic_register" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/iranyekan"
                    android:text="@string/enter_your_mobile_phone"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/font_size_small" />


                <com.baman.manex.controls.TextInputLayoutProfileControl
                    android:id="@+id/phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimen_medium"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/dimen_medium"
                    android:layout_marginBottom="@dimen/dimen_small"
                    app:hintText="@string/register_phone_number"
                    app:pic="@drawable/ic_phone"
                    app:value="@{viewModel.phoneNumber}" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dimen_medium"
            android:layout_marginTop="@dimen/dimen_medium"
            android:layout_marginEnd="@dimen/dimen_medium"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button_details">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/send_verification_code"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.tuyenmonkey.mkloader.MKLoader
                android:id="@+id/loading"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:visibility="gone"
                app:mk_color="@color/white"
                app:mk_type="FishSpinner" />

        </RelativeLayout>

    </RelativeLayout>

</layout>



